# bucketlist

./: Makefile  pyproject.toml
bucketlist/: __init__.py  bucketlist.py  generate_stopwords.py  jsonl_storage.py  storage.py
tests/: test_bucket.py  test_storage.py  utest.py
