[tool.poetry]
name = "bucketlist"
version = "0.5.0"
description = ""
authors = ["Miklos Koren <miklos.koren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ujson = "^5.8.0"
levenshtein = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
